EX1 - O Algoritmo de Auditoria de Dados
Parte 1: Investigação e Descoberta (Antes do Código)



1. O que é Discrepância de Dados (Outliers): Como um único valor muito alto ou muito baixo pode "mentir" sobre a média de um grupo?



R: é um valor que é muito maior ou muito menor que os outros pode indicar erro ou algo suspeito, Discrepância (outlier) = valor muito diferente dos outros

(100 + 120 + 110) / 3 = 110, um valor muito alto ou baixo puxa a média, Isso pode fazer a média não representar a maioria dos dados



2.O Conceito de Normalização: Por que em análise de dados muitas vezes ignoramos os valores extremos (o maior e o menor) para obter um resultado mais fiel?



R: Quando você remove o maior e o menor valor, está tentando representar o comportamento “normal” do grupo, sem interferência de casos fora do padrão.



3.Lógica de Negócio: Pesquise o que é uma "Margem de Tolerância" em auditorias financeiras 



R: a Margem de Tolerância é frequentemente referida nos normativos técnicos como Distorção Tolerável. Ela representa o limite máximo de erro ou irregularidade que um auditor está disposto a aceitar em uma conta ou transação específica sem que isso altere sua opinião sobre a fidedignidade das demonstrações financeiras.



Parte 2: Desenvolvimento em Python (A Aplicação)

limite_seguranca = 10000



num1 = float(input("Venda 01: "))

num2 = float(input("Venda 02: "))

num3 = float(input("Venda 03: "))



media = (num1 + num2 + num3) / 3



if media >= limite_seguranca:

  print("Limite de segurança atingido")

else:

  print("Sistema em quarentena")



print("-" * 40)

print(f"Venda 01: {num1} | Tipo: {type(num1)}")

print(f"Venda 02: {num2} | Tipo: {type(num2)}")

print(f"Venda 03: {num3} | Tipo:1 {type(num3)}")

print(f"Média: {media:.2f} | Tipo: {type(media)}")

print(f"Limite: {limite_seguranca} | Tipo: {type(limite_seguranca)}")

print("-" * 40)



Parte 3: Análise de Compreensão e Metacognição

Responda após finalizar o código:

O Teste de Estresse (Análise): Realize um Teste de Mesa manual com os valores: Venda 1 = 100, Venda 2 = 200, Venda 3 = 5000. O que aconteceu com a média? O seu código tomou a decisão que você esperava? Se não, qual linha de lógica você precisou alterar?
Aplicação Real: Se este código fosse usado em um banco real, qual o perigo de usar uma variável global para o limite de segurança em vez de uma variável protegida?
A Experiência Individual: "Descreva o erro de indentação ou de digitação (SyntaxError/NameError) mais frustrante que você cometeu durante a elaboração deste código específico. Como a sua intuição te ajudou a encontrar o erro antes mesmo de ler a mensagem de erro do Python? Explique a diferença entre o que você achava que o computador estava lendo e o que ele realmente estava lendo naquela linha."




1.



Venda 01: 100  

Venda 02: 200

Venda 03: 5000

Sistema em quarentena

----------------------------------------

Venda 01: 100.0 | Tipo: <class 'float'>

Venda 02: 200.0 | Tipo: <class 'float'>

Venda 03: 5000.0 | Tipo:1 <class 'float'>

Média: 1766.67 | Tipo: <class 'float'>

Limite: 10000 | Tipo: <class 'int'>





venda01 100>100.0

venda02 200>200.0

venda03 500>5000.0  



exemplo: O valor digitado como inteiro (100) foi convertido para decimal (100.0) por causa do uso da função float().

Python utiliza ponto (.) como separador decimal, seguindo o padrão internacional







2.

R: Não basta o cálculo estar certo — o controle sobre os dados precisa ser seguro



Uma simples variável global pode virar:



° Brecha de segurança



° Erro crítico



° Prejuízo financeiro



1766 > 1000 → Fraude Um valor suspeito (5000) passa → possível fraude.



3.



 print(f"Limite: {limite_seguranca} | Tipo: {type(limite_seguranca)}")22

                                     ^

SyntaxError: invalid syntax



3.O erro ocorreu porque o número 22 foi digitado fora da função print(), gerando um erro de sintaxe. O Python identifica esse tipo de erro e geralmente destaca a linha com problema, mostrando uma mensagem como.



Valores extremos (outliers) podem distorcer a média
A normalização melhora a análise de dados
A segurança é essencial em sistemas financeiros
Pequenos erros de sintaxe podem quebrar o código
O Python ajuda a identificar erros, mas a análise humana é fundamental
